new route: book_list redirected home_route to book_list route added controller: BookController added ControllerAction: listBooksAction to BookController new template: booklist.html.twig

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,17 @@
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
+
+redirect_home:
+  path: /
+  defaults:
+    _controller: FrameworkBundle:Redirect:Redirect
+    route: book_list
+
+book_list:
+  path: /books
+  defaults:
+    _controller: AppBundle:Book:listbooks
+
+
+
