--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -7,6 +7,7 @@ redirect_home:
   defaults:
     _controller: FrameworkBundle:Redirect:Redirect
     route: book_list
+    permanent: true
 
 book_list:
   path: /books
