added RepositoryClasses for Entities added one custom Repositoryfunction

--- a/src/AppBundle/Resources/config/doctrine/Book.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Book.orm.yml
@@ -1,5 +1,6 @@
 AppBundle\Entity\Book:
     type: entity
+    repositoryClass: AppBundle\Entity\BookRepository
     table: book
     id:
         id:
