--- a/src/AppBundle/Resources/config/doctrine/User.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/User.orm.yml
@@ -1,5 +1,6 @@
 AppBundle\Entity\User:
     type: entity
+    repositoryClass: AppBundle\Entity\UserRepository
     table: user
     id:
         id:
