--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "doctrine/doctrine-migrations-bundle": "^1.0"
     },
     "require-dev": {
+        "phpunit/phpunit": "4.8.*",
         "sensio/generator-bundle": "~2.3",
         "symfony/phpunit-bridge": "~2.7",
         "doctrine/doctrine-fixtures-bundle": "^2.3"
