add FormClass BookType.php added option setting to FormClass for dataclass and validationgroup added constraints to Book-attributes registered BookType as a service "app_addbook"

--- a/app/config/validation/bookValidation.yml
+++ b/app/config/validation/bookValidation.yml
@@ -3,3 +3,9 @@ AppBundle\Entity\Book:
     title:
       - NotBlank
           groups: [creation]
+    author:
+        - NotBlank
+            groups: [creation]
+    isbn:
+        - NotBlank
+            groups: [creation]
