--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -7,3 +7,8 @@ services:
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+
+  app.form.type.addbook:
+      class: AppBundle\Form\Type\BookType
+      tags:
+          - {name: form.type, alias: app_addBook}
