validation folder once again updated book.orm.yml->added price field

--- a/src/AppBundle/Resources/config/doctrine/Book.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Book.orm.yml
@@ -18,4 +18,8 @@ AppBundle\Entity\Book:
         author:
             type: string
             length: 255
+        price:
+            type: decimal
+            precision: 10
+            scale: 2
     lifecycleCallbacks: {  }
