new functionality "view a book":   added  route, controller method and twigg template for book_view exception handling to BookRepository   added try-catch block to  findOneById method   added BookRepositoryException class

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -12,9 +12,14 @@ redirect_home:
 book_list:
   path: /books
   defaults:
-    _controller: AppBundle:Book:listbooks
+    _controller: AppBundle:Book:listBooks
 
 book_new:
   path: /books/new
   defaults:
     _controller: AppBundle:Book:new
+
+book_view:
+  path: /books/view/{id}
+  defaults:
+    _controller: AppBundle:Book:viewBook
