add simple edit action
* introduce new route book_edit
* use same template as for book_create
* remove unused code from controller create action

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -23,3 +23,8 @@ book_view:
   path: /books/view/{id}
   defaults:
     _controller: AppBundle:Book:viewBook
+
+book_edit:
+  path: /books/edit/{id}
+  defaults:
+    _controller: AppBundle:Book:editBook
