user can load book fixtures #3
add route book_load_fixtures /books/fixtures-load
add controller action BookController::loadBookFixturesAction
add flash message for failing and successful book fixtures load

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -28,3 +28,8 @@ book_edit:
   path: /books/edit/{id}
   defaults:
     _controller: AppBundle:Book:editBook
+
+book_load_fixtures:
+  path: /books/fixtures-load
+  defaults:
+    _controller: AppBundle:Book:loadBookFixtures
