user can delete all books #4
add route book_delete_all /books/delete-all
add controller action BookController::deleteAllBooksAction
add flash message for successful deletion of all books

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -24,6 +24,11 @@ book_view:
   defaults:
     _controller: AppBundle:Book:viewBook
 
+book_delete_all:
+  path: /books/delete-all
+  defaults:
+    _controller: AppBundle:Book:deleteAllBooks
+
 book_edit:
   path: /books/edit/{id}
   defaults:
