travis integration2   renamed to .travis.yml   added cache directives to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,11 @@ before_script:
 script:
   - phpunit -c app
 
+cache:
+  directories:
+    - vendor
+    - $HOME/.composer/cache
+
 notifications:
   email:
     -  nils.freigang@gmx.de
