--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ install:
   - travis_retry composer self-update && composer --version
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
   - travis_retry composer install --prefer-dist --no-interaction
-#  - php app/console doctrine:database:create --env=test
-#  - php app/console doctrine:schema:create --env=test
-#  - php app/console doctrine:fixtures:load -n --env=test
+  - php app/console doctrine:database:create --env=test
+  - php app/console doctrine:schema:create --env=test
+  - php app/console doctrine:fixtures:load -n --env=test
 
 before_script:
   - cp app/config/parameters.yml.travis app/config/parameters.yml
