travis integration   wrote test parameters to config_test.yml   execute migrations in travis.yml   removed cp command in travis yml   load mysql service in travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,21 +6,20 @@ php:
   - 7.0
   - hhvm
 
+services:
+  - mysql
+
 before_script:
-  - cp app/config/parameters.yml.travis app/config/parameters.yml
   - composer self-update && composer --version
   - composer install --prefer-dist --no-interaction
   - php app/console doctrine:database:create --env=test
   - php app/console doctrine:schema:create --env=test
+  - php app/console doctrine:migrations:migrate --no-interaction
   - php app/console doctrine:fixtures:load -n --env=test
+
 
 script:
   - phpunit -c app
-
-cache:
-  directories:
-    - vendor
-    - $HOME/.composer/cache
 
 notifications:
   email:
