--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_script:
   - composer self-update && composer --version
   - composer install --prefer-dist --no-interaction
   - php app/console doctrine:database:create --env=test
-  - php app/console doctrine:schema:create --env=test
+#  - php app/console doctrine:schema:create --env=test
   - php app/console doctrine:migrations:migrate --no-interaction
   - php app/console doctrine:fixtures:load -n --env=test
 
