--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ services:
 before_script:
   - composer self-update && composer --version
   - composer install --prefer-dist --no-interaction
+  - php app/console doctrine:database:drop --no-interaction --force --if-exists
   - php app/console doctrine:database:create --env=test
   - php app/console doctrine:schema:create --env=test
   - php app/console doctrine:migrations:migrate --no-interaction
