--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,7 @@ before_script:
   - composer install --prefer-dist --no-interaction
   - php app/console doctrine:database:drop --no-interaction --force --if-exists
   - php app/console doctrine:database:create --env=test
-  - php app/console doctrine:schema:create --env=test
-  - php app/console doctrine:migrations:migrate --no-interaction
+  - php app/console doctrine:migrations:migrate --no-interaction --env=test
   - php app/console doctrine:fixtures:load -n --env=test
 
 script:
