--- a/composer.json
+++ b/composer.json
@@ -28,10 +28,10 @@
     },
     "scripts": {
         "reset-db": [
-            "php bin/console doctrine:database:drop --no-interaction --force --if-exists",
-            "php bin/console doctrine:database:create --env=test",
-            "php bin/console doctrine:migrations:migrate --no-interaction",
-            "php app/console doctrine:fixtures:load -n --env=test"
+            "php app/console doctrine:database:drop --no-interaction --force --if-exists",
+            "php app/console doctrine:database:create",
+            "php app/console doctrine:migrations:migrate --no-interaction",
+            "php app/console doctrine:fixtures:load -n"
         ],
         "post-install-cmd": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
