--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -4,9 +4,9 @@
 parameters:
     database_host:     127.0.0.1
     database_port:     ~
-    database_name:     lapp
+    database_name:     symfony
     database_user:     root
-    database_password: root
+    database_password: ~
     # You should uncomment this if you want use pdo_sqlite
     # database_path: "%kernel.root_dir%/data.db3"
 
