--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,10 @@
     "type": "project",
     "autoload": {
         "psr-4": {
-            "": "src/"
+            "source": "src/"
         }
     },
+    "minimum-stability": "stable",
     "require": {
         "php": ">=5.3.9",
         "symfony/symfony": "2.8.*",
