SensioLabs insight fixes   added namespace-separator to composer.json   altered migration to rename field in User Table

--- a/src/AppBundle/Resources/config/doctrine/User.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/User.orm.yml
@@ -15,6 +15,6 @@ AppBundle\Entity\User:
         password:
             type: string
             length: 255
-        isActive:
+        active:
             type: boolean
     lifecycleCallbacks: {  }
