remove deprecations   referring to BookType via fully-qualified class Name (BookType::class) in BookController   removed deprecated getName() from BookType class   removed alias property from app.form.type.addbook service

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -11,4 +11,4 @@ services:
   app.form.type.addbook:
       class: AppBundle\Form\Type\BookType
       tags:
-          - {name: form.type, alias: app_addBook}
+          - {name: form.type}
