--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "sensio/distribution-bundle": "~4.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
-        "doctrine/doctrine-migrations-bundle": "^1.0"
+        "doctrine/doctrine-migrations-bundle": "^1.0",
+        "knplabs/knp-menu-bundle": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "4.8.*",
