--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -12,3 +12,11 @@ services:
       class: AppBundle\Form\Type\BookType
       tags:
           - {name: form.type}
+
+  app.menu_builder:
+      class: AppBundle\Menu\MenuBuilder
+      arguments: ["@knp_menu.factory"]
+      tags:
+          - name: knp_menu.menu_builder
+            method: createMainMenu
+            alias: main
