--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -12,8 +12,14 @@
     </php>
 
     <testsuites>
-        <testsuite name="Project Test Suite">
-            <directory>../tests</directory>
+        <testsuite name="Unit">
+            <directory>../tests/AppBundle/Unit</directory>
+        </testsuite>
+        <testsuite name="Unit">
+            <directory>../tests/AppBundle/Functional</directory>
+        </testsuite>
+        <testsuite name="EdgeToEdge">
+            <directory>../tests/AppBundle/EdgeToEdge</directory>
         </testsuite>
     </testsuites>
 
@@ -36,4 +42,12 @@
             </exclude>
         </whitelist>
     </filter>
+
+    <logging>
+        <log type="coverage-html" target="../tests/coverage/report" lowUpperBound="35"
+             highLowerBound="70"/>
+        <log type="coverage-clover" target="../tests/coverage/coverage.xml"/>
+        <log type="coverage-text" target="php://stdout" showUncoveredFiles="false"/>
+        <log type="json" target="/tmp/logfile.json"/>
+    </logging>
 </phpunit>
