Add gulp to project
  Load gulp with npm (package.json) and add a sample
  gulpfile.js.

--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "homepage": "https://github.com/pueppiblue/lapp#readme",
   "dependencies": {
     "bower": "^1.7.9"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1"
   }
 }
