--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bower": "^1.7.9"
   },
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-sass": "^2.2.0"
   }
 }
