Introduce materialize grid layout and a sidebarmenu
  Menu rendering is moved to booklist.hrml.twig and a new
  knpsidebarmenu is created as a service.

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -20,3 +20,6 @@ services:
           - name: knp_menu.menu_builder
             method: createMainMenu
             alias: main
+          - name: knp_menu.menu_builder
+            method: createSidebarMenu
+            alias: sidebar
