Rework gulp structure and composer update
  This introduces a seperate gulp folder, so the gulp tasks are
  organized more easily.
  Add 'require-dir' as a npm dependency.
  Add dummy custom js and css project files under
    app/Resources/assets.
  Add script imports to base template.
  Add style imports to base template.

--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-util": "^3.0.7",
+    "require-dir": "^0.3.0",
     "gulp-clean-css": "^2.0.6",
     "gulp-concat": "^2.6.0",
     "gulp-sass": "^2.2.0",
